--- a/style.css
+++ b/style.css
@@ -268,13 +268,13 @@ body {
     align-items: center;
     justify-content: space-between;
     background-color: #5E936C;
-    border-radius: 12px;
+    border-radius: 14px;
 }
 .resfield {
     display: flex;
     align-items: center;
     justify-content: center;
-    border-radius: 10px;
+    border-radius: 12px;
     font-family: 'Courier New', Courier, monospace;
     color: #E8FFD7;
     font-weight: 600;
@@ -286,7 +286,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 10px;
+    border-radius: 12px;
     font-family: 'Courier New', Courier, monospace;
     color: #3E5F44;
     font-weight: 900;
@@ -561,21 +561,35 @@ body {
     transform: translate(-50%, -50%) scale(0);
     transition: all 0.2s ease-in-out;
 }
-#rematch {
+#rematch, #exit {
     background-color: #3E5F44;
     color: #E8FFD7;
     font-family: 'Courier New', Courier, monospace;
     height: 40px;
-    width: 120px;
+    width: 80%;
+    margin-bottom: 10px;
     border: none;
     border-radius: 8px;
     font-weight: 700;
     box-shadow: 3px 3px 5px 0px #93da97; 
     transition: transform 0.07s ease-in-out;
 }
+
 #rematch:active {
     transform: scale(0.9);
     box-shadow: 0px 0px 0px 0px #93da97;
+}
+
+#exit {
+    display: none;
+    background-color: rgb(250, 69, 69);
+    box-shadow: 3px 3px 5px 0px rgb(255, 106, 106); 
+}
+
+#exit:active {
+    transform: scale(0.9);
+    box-shadow: 0px 0px 0px 0px rgb(255, 106, 106); 
+
 }
 
 /* Manage responsiveness */
@@ -641,6 +655,11 @@ body {
     .playOnline{
         width: 80%;
         height: 70%;
+    }
+    .joinCreateResponse {
+        width: 90%;
+        height: 70svh;
+        max-height: 500px;
     }
 }
 @media (max-width: 390px) and (min-height: 600px) {
